<resources>
    <string name="app_name">TryToHack</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Auth Activity -->
    <string name="auth_activity_title">Log In</string>
    <string name="auth_activity_button">Log In</string>
    <string name="auth_activity_login_empty">Login can\'t be empty</string>
    <string name="auth_activity_login_matcher">Login can only contain letters numbers and underscores</string>
    <string name="auth_activity_password_empty">Password can\'t be empty</string>
    <string name="auth_activity_password_matcher">Password min length: 4 symbols</string>
    <string name="auth_hint_login">Login</string>
    <string name="auth_hint_password">Password</string>
    <string name="secret_hint_password">Secret field</string>
    <string name="auth_register">Not register yet? Register now!</string>
    <string name="auth_login">Already register? Log In!</string>
    <string name="auth_button_register">Sign in</string>
    <string name="menu_perm">Permission denied</string>


    <string name="add_project">Добавить проект</string>


</resources>
